--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,13 +13,8 @@ JWT_SECRET=
 JWT_ENCODE_ALGORITHM=
 LOGIN_EXPIRE_DAYS=
 
-AMQP_HOST=
-AMQP_PORT=
-AMQP_USERNAME=
-AMQP_PASSWORD=
-AMQP_PUBLISH_QUEUE=
-AMQP_CONSUME_QUEUE=
-
-S3_ENDPOINT=
-S3_ACCESS_KEY=
-S3_SECRET_KEY=
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USERNAME=
+SMTP_PASSWORD=
+SMTP_USE_TLS=
