--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,8 @@ argon2-cffi # required for passlib.hash.argon2
 
 aio_pika # amqp
 
+aiosmtplib # smtp
+
 aioboto3 # s3
 
 python-multipart # required for fastapi UploadFile
