--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.9",
