--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,12 +13,11 @@ JWT_SECRET=
 JWT_ENCODE_ALGORITHM=
 LOGIN_EXPIRE_DAYS=
 
-AMQP_HOST=
-AMQP_PORT=
-AMQP_USERNAME=
-AMQP_PASSWORD=
-AMQP_PUBLISH_QUEUE=
-AMQP_CONSUME_QUEUE=
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USERNAME=
+SMTP_PASSWORD=
+SMTP_USE_TLS=
 
 S3_ENDPOINT=
 S3_ACCESS_KEY=
@@ -26,3 +25,7 @@ S3_SECRET_KEY=
 
 GOOGLE_CLIENT_ID= 
 GOOGLE_CLIENT_SECRET= 
+
+SERVICE_DOMAIN=
+SERVICE_PORT=
+SERVICE_USE_HTTPS=
