--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.2.1",
     "antd": "^5.3.2",
     "axios": "^1.3.4",
+    "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
