--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-google-login": "^5.2.2",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-scroll-sync": "^0.11.0",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.0"
   },
