--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,17 +3,14 @@ version: "3.8"
 services:
     backend:
         container_name: sdm-backend
-        image: python:3.9
+        build: ./backend
         restart: unless-stopped
-        command: sh -c "cd /app && pip install -r requirements.txt && pip install uvicorn && uvicorn main:app --host 0.0.0.0 --port 8000"
         ports:
             - "8000:8000"
         volumes:
             - ./backend:/app
         env_file:
             - ./backend/.env
-        environment:
-            - TZ=Asia/Taipei
         networks:
             - internal
     db:
