--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,8 @@ services:
             - ./backend:/app
         env_file:
             - ./backend/.env
+        depends_on:
+            - db
         networks:
             - internal
     db:
