--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "@testing-library/user-event": "^13.2.1",
     "antd": "^5.3.2",
     "axios": "^1.3.4",
+    "i18next": "^22.4.15",
+    "i18next-browser-languagedetector": "^7.0.1",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
@@ -19,6 +21,8 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
+    "react-i18next": "^12.2.2",
+    "react-intl": "^6.4.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-scroll-sync": "^0.11.0",
