wsa/#62/update-package-list

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,3 +21,8 @@ python-multipart # required for fastapi UploadFile
 starlette-session
 authlib
 httpx
+
+google-auth
+google-auth-oauthlib
+google-api-python-client
+
