--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@toast-ui/react-calendar": "^2.1.3",
     "antd": "^5.3.2",
     "axios": "^1.3.4",
+    "framer-motion": "^10.12.7",
     "i18next": "^22.4.15",
     "i18next-browser-languagedetector": "^7.0.1",
     "js-cookie": "^3.0.1",
@@ -30,6 +32,7 @@
     "react-scripts": "5.0.1",
     "react-scroll-sync": "^0.11.0",
     "styled-components": "^5.3.9",
+    "tui-calendar": "^1.15.3",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
