--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "moment-range": "^4.0.2",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-i18next": "^12.2.2",
