--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
+    "react-highlight-words": "^0.20.0",
     "react-i18next": "^12.2.2",
     "react-intl": "^6.4.1",
     "react-router-dom": "^6.9.0",
